# wasm-data-injection-sample

./: Cargo.toml  README.md
crates/target-wasm/: Cargo.toml
crates/target-wasm/src/: main.rs
src/: main.rs
